--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,30 @@
-# =============================================================
-# AX5 UrbanIA — Dépendances Python
-# =============================================================
+# AX5 UrbanIA — Requirements v0.2.0
+# ===================================
 
-# --- API ---
-fastapi>=0.109.0
+# API
+fastapi>=0.110.0
 uvicorn[standard]>=0.27.0
 pydantic>=2.5.0
-python-dotenv>=1.0.0
 
-# --- LLM ---
-anthropic>=0.40.0
+# Anthropic
+anthropic>=0.18.0
 
-# --- Graph DB ---
+# Graph DB
 falkordb>=1.0.0
-redis>=5.0.0
 
-# --- Données ---
-pandas>=2.2.0
-numpy>=1.26.0
-
-# --- Géospatial ---
+# Geo + Data
+pandas>=2.1.0
 geopandas>=0.14.0
-shapely>=2.0.0
-geojson>=3.0.0
 
-# --- HTTP ---
+# HTTP async (Couche 3 connectors)
 httpx>=0.27.0
-aiohttp>=3.9.0
 
-# --- Base de données ---
-sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.9
-
-# --- Vectorisation ---
+# RAG
 chromadb>=0.4.0
-sentence-transformers>=2.3.0
 
-# --- Monitoring ---
-loguru>=0.7.0
+# Config
+python-dotenv>=1.0.0
+pyyaml>=6.0.0
 
-# --- Tests ---
-pytest>=8.0.0
-pytest-asyncio>=0.23.0
-
-# --- Visualisation (optionnel) ---
-plotly>=5.18.0
+# Logging
+structlog>=24.0.0
